--- a/index.html
+++ b/index.html
@@ -5,117 +5,155 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Web Browser</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-            height: 100vh; /* Ensure body takes full height */
-            display: flex;
-            flex-direction: column; /* Stack children vertically */
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 0; 
+            padding: 0; 
+            background-color: #fff; 
+            color: #000; 
+            transition: background-color 0.5s, color 0.5s; 
         }
-        .toolbar {
-            display: flex;
-            align-items: center;
-            background-color: #fff;
-            border-bottom: 1px solid #ddd;
-            padding: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        .toolbar, .tabs { 
+            display: flex; 
+            align-items: center; 
+            background: #f1f1f1; 
+            padding: 10px; 
+            border-bottom: 1px solid #ccc; 
         }
-        .nav-btn {
-            color: #555;
-            border: none;
-            background: #f0f0f0;
-            padding: 5px 10px;
-            margin-right: 5px;
-            cursor: pointer;
-            border-radius: 4px;
+        .toolbar { 
+            justify-content: space-between; 
+        }
+        .tabs { 
+            justify-content: flex-start; 
+            overflow-x: auto; 
+        }
+        .tab { 
+            padding: 10px 20px; 
+            background: #ddd; 
+            cursor: pointer; 
+            border-radius: 10px 10px 0 0; 
+            margin-right: 5px; 
+            position: relative; 
             transition: background 0.3s;
         }
-        .nav-btn:hover {
-            background: #e0e0e0;
+        .tab.active { 
+            background: #bbb; 
         }
-        .tabs {
-            display: flex;
-            background-color: #f0f0f0;
-            padding: 5px;
-            border-bottom: 1px solid #ddd;
+        .close-btn { 
+            position: absolute; 
+            right: 5px; 
+            top: 5px; 
+            cursor: pointer; 
+            background: #f00; 
+            color: #fff; 
+            border-radius: 50%; 
+            padding: 2px 7px; 
         }
-        .tab {
-            color: #555;
-            padding: 10px 15px;
-            cursor: pointer;
-            border: 1px solid #ddd;
-            border-radius: 4px 4px 0 0;
-            margin-right: 5px;
+        .tab-content { 
+            display: none; 
+            padding: 20px; 
+            border: 1px solid #ddd; 
+            border-radius: 0 0 10px 10px; 
+        }
+        .tab-content.active { 
+            display: block; 
+        }
+        .toolbar button, .toolbar input { 
+            margin-right: 5px; 
+            padding: 5px 10px; 
+            border: 1px solid #ccc; 
+            border-radius: 5px; 
+            cursor: pointer; 
+            background-color: #fff; 
+            transition: background-color 0.3s; 
+        }
+        .toolbar button:hover { 
+            background-color: #e0e0e0; 
+        }
+        .toolbar input { 
+            flex: 1; 
+            border-radius: 5px; 
+            padding: 5px; 
+        }
+        iframe { 
+            width: 100%; 
+            height: calc(100vh - 150px); 
+            border: 1px solid #ddd; 
+            border-radius: 0 0 10px 10px; 
+        }
+        .settings, .history, .bookmarks { 
+            padding: 20px; 
+        }
+        .settings h2, .history h2, .bookmarks h2 { 
+            margin-top: 0; 
+        }
+        .settings input, .settings button { 
+            display: block; 
+            margin: 10px 0; 
+            padding: 5px; 
+        }
+        .bookmark { 
+            display: flex; 
+            align-items: center; 
+            margin: 5px 0; 
+        }
+        .bookmark button { 
+            margin-left: 10px; 
+        }
+        button:active { 
+            background-color: #ccc; 
+        }
+        .nav-btn { 
+            background-color: #007BFF; 
+            color: black; 
+            border: none; 
+            border-radius: 5px; 
+            padding: 10px; 
+            transition: background-color 0.3s; 
+        }
+        .nav-btn:hover { 
+            background-color: #0056b3; 
+        }
+        /* Light and dark mode styling */
+        .light-mode {
             background-color: #fff;
-            transition: background 0.3s;
-        }
-        .tab.active {
-            background-color: #e0e0e0;
-            border-bottom: 1px solid transparent;
-        }
-        .close-btn {
-            margin-left: 10px;
-            color: red;
-            cursor: pointer;
-        }
-        .tab-content {
-            flex-grow: 1; /* Allow content area to grow */
-            display: none;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 0 0 4px 4px;
-            background-color: #fff;
-            overflow: auto; /* Allow scrolling if content is too large */
-        }
-        .tab-content.active {
-            display: block;
-        }
-        .settings, .history, .bookmarks {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 20px;
-            margin-top: 10px;
-        }
-        iframe {
-            width: 100%;
-            height: 100%; /* Allow iframe to take full height */
-            border: none;
+            color: #000;
         }
         .dark-mode {
-            background-color: #222;
-            color: white;
-        }
-        .dark-mode .toolbar, .dark-mode .tabs {
             background-color: #333;
+            color: #fff;
         }
-        .dark-mode .settings, .dark-mode .history, .dark-mode .bookmarks {
-            background-color: #444;
-            border-color: #666;
+        .dark-mode .toolbar, .dark-mode .tabs { 
+            background: #444; 
         }
-        .dark-mode .tab {
-            background-color: #333;
-            color: white;
+        .dark-mode .tab { 
+            background: #555; 
         }
-        .dark-mode .tab.active {
-            background-color: #666;
+        .dark-mode .tab.active { 
+            background: #666; 
+        }
+        .dark-mode .toolbar button, .dark-mode .toolbar input { 
+            background-color: #555; 
+            color: #fff; 
+            border: 1px solid #666; 
+        }
+        .dark-mode .toolbar button:hover { 
+            background-color: #666; 
         }
     </style>
 </head>
 <body class="light-mode" id="body">
     <div class="toolbar">
         <button class="nav-btn" onclick="reloadPage()">🔄 Reload</button>
-        <button class="nav-btn" onclick="openTab('bookmarksPage')">🏠 Home</button>
+        <button onclick="openTab('bookmarksPage')">Home</button>
         <input type="text" id="urlInput" placeholder="Enter URL and press Enter" onkeypress="handleKeyPress(event)">
-        <button class="nav-btn" onclick="addBookmark()">⭐ Bookmark</button>
-        <button class="nav-btn" onclick="openTab('settings')">⚙️ Settings</button>
-        <button class="nav-btn" onclick="openTab('history')">🕒 History</button>
+        <button onclick="addBookmark()">⭐ Bookmark</button>
+        <button onclick="openTab('settings')">⚙️ Settings</button>
+        <button onclick="openTab('history')">🕒 History</button>
     </div>
     <div class="tabs" id="tabsContainer">
-        <div class="tab active" data-tab="tab1" onclick="openTab('tab1')">Tab <span class="close-btn" onclick="closeTab(event, 'tab1')">x</span></div>
-        <button class="nav-btn" onclick="addTab()">➕</button>
+        <div class="tab active" data-tab="tab1" onclick="openTab('tab1')">Tab 1 <span class="close-btn" onclick="closeTab(event, 'tab1')">x</span></div>
+        <button onclick="addTab()">+</button>
     </div>
     <div id="tab1" class="tab-content active">
         <iframe src="https://www.example.com" id="iframe1"></iframe>
@@ -124,7 +162,7 @@
         <h2>Settings</h2>
         <label for="proxyUrl">Proxy URL:</label>
         <input type="text" id="proxyUrl" placeholder="Enter proxy URL">
-        <button class="nav-btn" onclick="toggleProxy()">Toggle Proxy</button>
+        <button onclick="toggleProxy()">Toggle Proxy</button>
         <p id="proxyStatus">Proxy is off</p>
         <label for="firstScreenToggle">Show First Screen:</label>
         <input type="checkbox" id="firstScreenToggle" onchange="toggleFirstScreen()">
@@ -133,7 +171,7 @@
     </div>
     <div id="history" class="tab-content history">
         <h2>History</h2>
-        <button class="nav-btn" onclick="clearHistory()">Clear History</button>
+        <button onclick="clearHistory()">Clear History</button>
         <ul id="historyList"></ul>
     </div>
     <div id="bookmarksPage" class="tab-content bookmarks">
@@ -204,23 +242,12 @@
             }
         }
 
-        function removeBookmark(index) {
-            bookmarks.splice(index, 1); // Remove the bookmark at the specified index
-            localStorage.setItem('bookmarks', JSON.stringify(bookmarks));
-            renderBookmarks();
-        }
-
         function renderBookmarks() {
             bookmarksList.innerHTML = '';
-            bookmarks.forEach((bookmark, index) => {
-                if (bookmark.name && bookmark.url) { // Check if bookmark has a name and url
-                    const li = document.createElement('li');
-                    li.innerHTML = `
-                        <a href="${bookmark.url}" target="_blank">${bookmark.name}</a>
-                        <button onclick="removeBookmark(${index})">❌ Remove</button>
-                    `;
-                    bookmarksList.appendChild(li);
-                }
+            bookmarks.forEach(bookmark => {
+                const li = document.createElement('li');
+                li.innerHTML = `<a href="${bookmark.url}" target="_blank">${bookmark.name}</a>`;
+                bookmarksList.appendChild(li);
             });
         }
 
@@ -239,90 +266,103 @@
             renderHistory();
         }
 
-        function openTab(tabId) {
-            document.querySelectorAll('.tab-content').forEach(tab => {
-                tab.classList.remove('active');
-            });
-            document.querySelectorAll('.tab').forEach(tab => {
-                tab.classList.remove('active');
-            });
+        function toggleProxy() {
+            proxyEnabled = !proxyEnabled;
+            document.getElementById('proxyStatus').textContent = proxyEnabled ? 'Proxy is on' : 'Proxy is off';
+        }
 
-            document.getElementById(tabId).classList.add('active');
-            if (tabId === 'bookmarksPage') {
-                renderBookmarks();
-            }
-            if (tabId === 'history') {
-                renderHistory();
-            }
-
-            const activeTab = document.querySelector(`.tab[data-tab="${tabId}"]`);
-            if (activeTab) activeTab.classList.add('active');
-            activeTabId = tabId; // Update the active tab id
+        function toggleFirstScreen() {
+            localStorage.setItem('firstScreen', document.getElementById('firstScreenToggle').checked);
         }
 
         function addTab() {
-            const tabCount = document.querySelectorAll('.tab').length + 1;
-            const newTabId = `tab${tabCount}`;
-            const tabsContainer = document.getElementById('tabsContainer');
-
+            const newTabId = `tab${Date.now()}`;
             const newTab = document.createElement('div');
             newTab.className = 'tab';
-            newTab.dataset.tab = newTabId;
-            newTab.innerHTML = `Tab <span class="close-btn" onclick="closeTab(event, '${newTabId}')">x</span>`;
-            tabsContainer.insertBefore(newTab, tabsContainer.lastChild); // Insert before the add tab button
-
+            newTab.textContent = `Tab ${Object.keys(tabHistories).length + 1}`;
+            newTab.setAttribute('data-tab', newTabId);
+            newTab.onclick = () => openTab(newTabId);
+            const closeBtn = document.createElement('span');
+            closeBtn.className = 'close-btn';
+            closeBtn.textContent = 'x';
+            closeBtn.onclick = (event) => closeTab(event, newTabId);
+            newTab.appendChild(closeBtn);
+            document.getElementById('tabsContainer').insertBefore(newTab, document.querySelector('.tabs button'));
             const newTabContent = document.createElement('div');
             newTabContent.id = newTabId;
             newTabContent.className = 'tab-content';
             newTabContent.innerHTML = `<iframe src="https://www.example.com"></iframe>`;
             document.body.appendChild(newTabContent);
-
-            newTab.click(); // Open the new tab immediately
+            openTab(newTabId);
         }
 
-        function closeTab(event, tabId) {
-            event.stopPropagation(); // Prevent the tab from being clicked
-            const tab = document.querySelector(`.tab[data-tab="${tabId}"]`);
-            tab.remove(); // Remove the tab element
-            const content = document.getElementById(tabId);
-            content.remove(); // Remove the associated content
+        function openTab(tabId) {
+            const tabs = document.querySelectorAll('.tab-content');
+            const tabElements = document.querySelectorAll('.tab');
 
-            if (tab.classList.contains('active')) {
-                // If the closed tab was active, open the first tab
-                const firstTab = document.querySelector('.tab');
-                if (firstTab) firstTab.click();
+            tabs.forEach(tab => {
+                tab.classList.remove('active');
+            });
+
+            tabElements.forEach(tab => {
+                tab.classList.remove('active');
+            });
+
+            document.getElementById(tabId).classList.add('active');
+            const activeTab = [...tabElements].find(tab => tab.getAttribute('data-tab') === tabId);
+            if (activeTab) {
+                activeTab.classList.add('active');
+                activeTabId = tabId;
+            }
+
+            // Update the URL input to reflect the current tab URL
+            const activeIframe = document.querySelector(`.tab-content.active iframe`);
+            document.getElementById('urlInput').value = activeIframe.src;
+
+            // Store history
+            if (!tabHistories[tabId]) {
+                tabHistories[tabId] = { history: [], current: -1 };
+            }
+
+            if (tabHistories[tabId].history.length > 0) {
+                navigateToUrl(tabHistories[tabId].history[tabHistories[tabId].current], false);
             }
         }
 
-        function toggleProxy() {
-            proxyEnabled = !proxyEnabled;
-            document.getElementById('proxyStatus').textContent = proxyEnabled ? 'Proxy is on' : 'Proxy is off';
-            localStorage.setItem('proxyEnabled', proxyEnabled);
-        }
+        function closeTab(event, tabId) {
+            event.stopPropagation();
+            const tabToClose = document.querySelector(`.tab[data-tab="${tabId}"]`);
+            if (tabToClose) {
+                tabToClose.remove();
+            }
 
-        function toggleFirstScreen() {
-            const firstScreen = document.getElementById('firstScreenToggle').checked;
-            localStorage.setItem('firstScreen', firstScreen);
-            if (firstScreen) {
-                // Perform any actions needed when the first screen is enabled
+            const tabContent = document.getElementById(tabId);
+            if (tabContent) {
+                tabContent.remove();
+            }
+
+            if (tabToClose.classList.contains('active')) {
+                const remainingTabs = document.querySelectorAll('.tab');
+                if (remainingTabs.length > 0) {
+                    const newActiveTab = remainingTabs[remainingTabs.length - 1];
+                    openTab(newActiveTab.getAttribute('data-tab'));
+                } else {
+                    // If no tabs left, reset input
+                    document.getElementById('urlInput').value = '';
+                }
             }
         }
 
         function toggleDarkMode() {
             const body = document.getElementById('body');
-            body.classList.toggle('dark-mode');
-            const modeToggle = document.getElementById('modeToggle');
-            const isDarkMode = modeToggle.checked;
-            localStorage.setItem('darkMode', isDarkMode);
+            if (body.classList.contains('light-mode')) {
+                body.classList.remove('light-mode');
+                body.classList.add('dark-mode');
+            } else {
+                body.classList.remove('dark-mode');
+                body.classList.add('light-mode');
+            }
         }
-
-        // Load dark mode setting on page load
-        const isDarkMode = localStorage.getItem('darkMode') === 'true';
-        if (isDarkMode) {
-            document.getElementById('body').classList.add('dark-mode');
-            document.getElementById('modeToggle').checked = true;
-        }
-
     </script>
 </body>
 </html>
